--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-
-<!doctype html>
-<html lang="zh-Hant-TW">
-  <head>
-    <meta charset="utf-8">
+<!DOCTYPE html>
+<!-- saved from url=(0057)https://www.eebbft.top/qiqiww02/index-handafull0724.html? -->
+<html lang="zh-Hant-TW"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <meta name="theme-color" content="#0a0610">
     <title>極致肉慾・深夜私密約炮 | 18+ | Secret Match</title>
     <meta name="description" content="台灣頂級約炮社群，真人即時回覆。高顏值肉體展示，今晚就能約。尊重同意、匿名保密，絕對安全放心。">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
+    <link href="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/css2" rel="stylesheet">
+    <link rel="stylesheet" href="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/styles.css">
     <!-- Facebook Pixel 基础代码 -->
-    <script>
+    <script src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/1366119915145555" async=""></script><script async="" src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/fbevents.js.下载"></script><script>
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
       n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -38,11 +37,11 @@
   <body>
     <header class="site-header">
       <div class="container header__inner">
-        <a href="#" class="brand">
+        <a href="https://www.eebbft.top/qiqiww02/index-handafull0724.html?#" class="brand">
           <span class="brand__logo">💗</span>
           <span class="brand__name">Secret Match</span>
         </a>
-        <a id="headerLineCta" class="btn btn--line" href="#"  onclick="addLine()"><img src="static/images/line.png" alt="LINE" class="btn-icon">立即約炮</a>
+        <a id="headerLineCta" class="btn btn--line" href="https://www.eebbft.top/qiqiww02/index-handafull0724.html?#" onclick="addLine()"><img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/line.png" alt="LINE" class="btn-icon">立即約炮</a>
       </div>
     </header>
 
@@ -90,13 +89,8 @@
                 </div>
               </div>
               <div class="cta-panel__row" style="margin-top: 12px;">
-                <button
-                  id="btnLine"
-                  class="btn btn--primary btn--xl"
-                 
-                  onclick="addLine()"
-                >
-                  <img src="static/images/line.png" alt="LINE" class="btn-icon">加LINE立即约炮
+                <button id="btnLine" class="btn btn--primary btn--xl" onclick="addLine()">
+                  <img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/line.png" alt="LINE" class="btn-icon">加LINE立即约炮
                 </button>
               </div>
               <p class="hint">選好口味後，自動配對最適合你的肉體，今晚就能約。</p>
@@ -105,16 +99,16 @@
           <div class="hero__visual">
             <div class="portrait-stack">
               <div class="portrait-card portrait-card--a">
-                <img src="static/images/girls/a1.jpg" alt="高顏值女生 1" class="portrait" loading="lazy">
-                <div class="portrait-label" aria-hidden="true">N/A</div>
+                <img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a11.jpg" alt="高顏值女生 1" class="portrait" loading="lazy">
+                <div class="portrait-label" aria-hidden="true">Melody · 成熟知性</div>
               </div>
               <div class="portrait-card portrait-card--b">
-                <img src="static/images/girls/a2.jpg" alt="高顏值女生 2" class="portrait" loading="lazy">
-                <div class="portrait-label" aria-hidden="true">N/A</div>
+                <img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a9.jpg" alt="高顏值女生 2" class="portrait" loading="lazy">
+                <div class="portrait-label" aria-hidden="true">小沫 · 甜美可愛</div>
               </div>
               <div class="portrait-card portrait-card--c">
-                <img src="static/images/girls/a3.jpg" alt="高顏值女生 3" class="portrait" loading="lazy">
-                <div class="portrait-label" aria-hidden="true">N/A</div>
+                <img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a14.jpg" alt="高顏值女生 3" class="portrait" loading="lazy">
+                <div class="portrait-label" aria-hidden="true">Rita · 性感妩媚</div>
               </div>
             </div>
           </div>
@@ -127,13 +121,13 @@
           <h2>真人肉體・露骨展示</h2>
           <p class="section-sub">👉 左右滑動查看更多。約過的都說爽。</p>
         </div>
-        <div class="gallery__slider" id="gallerySlider">
-          <figure class="gallery-card"><img src="static/images/girls/a4.jpg" alt="女生照片 4" loading="lazy"><figcaption class="gallery-caption">N/A</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a5.jpg" alt="女生照片 5" loading="lazy"><figcaption class="gallery-caption">N/A</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a6.jpg" alt="女生照片 6" loading="lazy"><figcaption class="gallery-caption">N/A</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a7.jpg" alt="女生照片 7" loading="lazy"><figcaption class="gallery-caption">N/A</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a8.jpg" alt="女生照片 8" loading="lazy"><figcaption class="gallery-caption">N/A</figcaption></figure>
-          <figure class="gallery-card"><img src="static/images/girls/a9.jpg" alt="女生照片 9" loading="lazy"><figcaption class="gallery-caption">N/A</figcaption></figure>
+        <div class="gallery__slider" id="gallerySlider" style="cursor: grab;">
+          <figure class="gallery-card"><img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a4.jpg" alt="女生照片 4" loading="lazy"><figcaption class="gallery-caption">艾拉 · 黑絲後入</figcaption></figure>
+          <figure class="gallery-card"><img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a3.jpg" alt="女生照片 5" loading="lazy"><figcaption class="gallery-caption">芷妮 · 乳交爆乳</figcaption></figure>
+          <figure class="gallery-card"><img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a1.jpg" alt="女生照片 6" loading="lazy"><figcaption class="gallery-caption">琪琪 · 口交技巧好</figcaption></figure>
+          <figure class="gallery-card"><img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a2.jpg" alt="女生照片 7" loading="lazy"><figcaption class="gallery-caption">安安 · 制服誘惑</figcaption></figure>
+          <figure class="gallery-card"><img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a6.jpg" alt="女生照片 8" loading="lazy"><figcaption class="gallery-caption">米亞 · 深喉口爆</figcaption></figure>
+          <figure class="gallery-card"><img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/a5.jpg" alt="女生照片 9" loading="lazy"><figcaption class="gallery-caption">可欣 · 熟女口交</figcaption></figure>
         </div>
       </section>
 
@@ -163,12 +157,8 @@
         <div class="container cta__card">
           <h2>準備好幹一發了嗎？💗</h2>
           <p>今晚就能約到真人肉體，立刻加入 LINE 開始你的極樂之旅。</p>
-          <button
-            id="btnLine2"
-            class="btn btn--primary btn--xl btn--pulse"
-            onclick="addLine()"
-          >
-            <img src="static/images/line.png" alt="LINE" class="btn-icon">加 LINE 立即約炮
+          <button id="btnLine2" class="btn btn--primary btn--xl btn--pulse" onclick="addLine()">
+            <img src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/line.png" alt="LINE" class="btn-icon">加 LINE 立即約炮
           </button>
           <p class="hint">溫馨提醒：僅限雙方同意之成人約會，請尊重彼此界限。</p>
         </div>
@@ -182,9 +172,9 @@
           <p class="footer__text">台灣頂級約炮社群。成人限定，匿名保密，今晚就能約。</p>
         </div>
         <div class="footer__links">
-          <a href="#" class="footer__link">使用條款</a>
-          <a href="#" class="footer__link">隱私政策</a>
-          <a href="#" class="footer__link">聯絡我們</a>
+          <a href="https://www.eebbft.top/qiqiww02/index-handafull0724.html?#" class="footer__link">使用條款</a>
+          <a href="https://www.eebbft.top/qiqiww02/index-handafull0724.html?#" class="footer__link">隱私政策</a>
+          <a href="https://www.eebbft.top/qiqiww02/index-handafull0724.html?#" class="footer__link">聯絡我們</a>
         </div>
       </div>
       <div class="container footer__legal">
@@ -196,9 +186,10 @@
 
     <div id="toast" class="toast" role="status" aria-live="polite" aria-atomic="true"></div>
 
-    <script src="static/js/script.js"></script>
-  <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"cf5f7a21702f42f18107591b7e00e6dd","r":1,"server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
-</body>
-  </html>
+    <script src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/script.js.下载"></script>
+  <script defer="" src="./極致肉慾・深夜私密約炮 _ 18+ _ Secret Match_files/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon="{&quot;version&quot;:&quot;2024.11.0&quot;,&quot;token&quot;:&quot;cf5f7a21702f42f18107591b7e00e6dd&quot;,&quot;r&quot;:1,&quot;server_timing&quot;:{&quot;name&quot;:{&quot;cfCacheStatus&quot;:true,&quot;cfEdge&quot;:true,&quot;cfExtPri&quot;:true,&quot;cfL4&quot;:true,&quot;cfOrigin&quot;:true,&quot;cfSpeedBrain&quot;:true},&quot;location_startswith&quot;:null}}" crossorigin="anonymous"></script>
+
+  
 
 
+</body></html>
